# Homework_31

./: README.md  pyproject.toml
ads/: models.py  serializer.py
ads/views/: ad.py  category.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selesction_create_test.py
users/: models.py  serializers.py
